deployment/deployment.yaml
#| filename: "deployment/deployment.yaml"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
  labels:
    app: gemini-chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gemini-chat-app
  template:
    metadata:
      labels:
        app: gemini-chat-app
    spec:
      containers:
      - name: chat-app-container
        image: vincentgimenes123/gemini_chat_app:latest
        ports:
        - containerPort: 8000
